--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@
 @import url('header-profile.css');
 @import url('agenda.css');
 @import url('buttons.css');
-@import url('footer.css');
+@import url('main-menu.css');
 @import url('backdrop-menu.css');
 
 :root {
