--- a/styles/backdrop-menu.css
+++ b/styles/backdrop-menu.css
@@ -18,6 +18,9 @@
     bottom: 70px;
     right: 0;
 }
+.backdrop__btns.float-btn {
+    position: fixed;
+}
 .backdrop__btns div {
     display: flex;
     align-items: center;
@@ -27,4 +30,13 @@
     border-radius: 2323px;
     padding: 0.3em 0.8em;
     font-size: 1.2rem;
+}
+
+@media screen and (min-width: 1040px) {
+    .menu-list__backdrop {
+        display: none;
+    }
+    .backdrop__btns {
+        display: none;
+    }
 }
