--- a/styles/main-menu.css
+++ b/styles/main-menu.css
@@ -42,6 +42,7 @@
 }
 .appointment-input {
     appearance: none;
+    display: none;
 }
 
 
@@ -106,6 +107,7 @@
 
     .appointment-input {
         appearance: none;
+        display: none;
     }
 
     .patient__info label {
